Fix style regression on mobile.

--- a/index.css
+++ b/index.css
@@ -1,9 +1,12 @@
 body {
   margin: 0;
+  width: 100vw;
+  height: 100vh;
 }
 
 p {
-  margin: 5rem;
+  margin: 5vmin;
+  font-size: 2.8vmin;
 }
 
 a:link {
@@ -13,8 +16,13 @@ a:link {
 a:visited {
   color: white;
 }
+
 ul {
   list-style: inside;
+}
+
+li {
+  font-size: 2.8vmin;
 }
 
 h1 {
@@ -32,6 +40,7 @@ h2 {
 .section {
   height: 100vh;
   width: 100vw;
+  max-width: 100%;
   display: flex;
 }
 
@@ -70,9 +79,20 @@ h2 {
 
 @media(max-width: 900px) {
   h1 {
-    font-size: 10vw;
+    font-size: 10vmin;
+    width: 50%;
   }
-  .section {
+
+  h2 {
+    font-size: 8vmin; 
+  }
+
+  p, li {
+    font-size: 6vmin;
+  }
+
+  .half-section {
+    height: 100vh;
     flex-direction: column;
   }
 }
